system/iptables-default
# Generated by iptables-save v1.8.13 on Sat Aug 29 07:58:12 2026
*nat
:PREROUTING ACCEPT [106:22129]
:INPUT ACCEPT [32:5322]
:OUTPUT ACCEPT [189:50714]
:POSTROUTING ACCEPT [189:50714]
:oem_nat_pre - [0:0]
:tetherctrl_nat_POSTROUTING - [0:0]
-A PREROUTING -j oem_nat_pre
-A POSTROUTING -j tetherctrl_nat_POSTROUTING
COMMIT
# Completed on Sat Aug 29 07:58:12 2026
# Generated by iptables-save v1.8.13 on Sat Aug 29 07:58:12 2026
*mangle
:PREROUTING ACCEPT [2048:1333944]
:INPUT ACCEPT [1974:1317137]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [1820:688424]
:POSTROUTING ACCEPT [1828:691797]
:bw_mangle_POSTROUTING - [0:0]
:connmark_mangle_INPUT - [0:0]
:connmark_mangle_OUTPUT - [0:0]
:idletimer_mangle_POSTROUTING - [0:0]
:oem_mangle_post - [0:0]
:routectrl_mangle_INPUT - [0:0]
:tetherctrl_mangle_FORWARD - [0:0]
:wakeupctrl_mangle_INPUT - [0:0]
-A INPUT -j connmark_mangle_INPUT
-A INPUT -j wakeupctrl_mangle_INPUT
-A INPUT -j routectrl_mangle_INPUT
-A FORWARD -j tetherctrl_mangle_FORWARD
-A OUTPUT -j connmark_mangle_OUTPUT
-A POSTROUTING -j oem_mangle_post
-A POSTROUTING -j bw_mangle_POSTROUTING
-A POSTROUTING -j idletimer_mangle_POSTROUTING
-A bw_mangle_POSTROUTING -o ipsec+ -j RETURN
-A bw_mangle_POSTROUTING -m policy --dir out --pol ipsec -j RETURN
-A bw_mangle_POSTROUTING -j MARK --set-xmark 0x0/0x100000
-A connmark_mangle_INPUT -m connmark --mark 0x0/0xfffff -j CONNMARK --save-mark --nfmask 0xfffff --ctmask 0xfffff
-A connmark_mangle_OUTPUT -m connmark --mark 0x0/0xfffff -j CONNMARK --save-mark --nfmask 0xfffff --ctmask 0xfffff
-A idletimer_mangle_POSTROUTING -o wlan0 -j IDLETIMER --timeout 15 --label 100
-A routectrl_mangle_INPUT -i wlan0 -j MARK --set-xmark 0x30064/0x7fefffff
-A tetherctrl_mangle_FORWARD -p tcp -m tcp --tcp-flags SYN SYN -j TCPMSS --clamp-mss-to-pmtu
-A wakeupctrl_mangle_INPUT -i wlan0 -m mark --mark 0x80000000/0x80000000 -m limit --limit 10/sec -j NFLOG --nflog-prefix "432902426637:wlan0" --nflog-group 3 --nflog-threshold 8
COMMIT
# Completed on Sat Aug 29 07:58:12 2026
# Generated by iptables-save v1.8.13 on Sat Aug 29 07:58:12 2026
*raw
:PREROUTING ACCEPT [2052:1338864]
:OUTPUT ACCEPT [1825:691136]
:bw_raw_PREROUTING - [0:0]
:idletimer_raw_PREROUTING - [0:0]
:tetherctrl_raw_PREROUTING - [0:0]
-A PREROUTING -j idletimer_raw_PREROUTING
-A PREROUTING -j bw_raw_PREROUTING
-A PREROUTING -j tetherctrl_raw_PREROUTING
-A bw_raw_PREROUTING -m mark --mark 0xdeadc1a7 -j DROP
-A bw_raw_PREROUTING -i ipsec+ -j RETURN
-A bw_raw_PREROUTING -m policy --dir in --pol ipsec -j RETURN
-A idletimer_raw_PREROUTING -i wlan0 -j IDLETIMER --timeout 15 --label 100
COMMIT
# Completed on Sat Aug 29 07:58:12 2026
# Generated by iptables-save v1.8.13 on Sat Aug 29 07:58:12 2026
*filter
:INPUT ACCEPT [1978:1322057]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [1825:691136]
:bw_FORWARD - [0:0]
:bw_INPUT - [0:0]
:bw_OUTPUT - [0:0]
:bw_costly_shared - [0:0]
:bw_data_saver - [0:0]
:bw_global_alert - [0:0]
:bw_happy_box - [0:0]
:bw_penalty_box - [0:0]
:fw_FORWARD - [0:0]
:fw_INPUT - [0:0]
:fw_OUTPUT - [0:0]
:oem_fwd - [0:0]
:oem_in - [0:0]
:oem_out - [0:0]
:st_OUTPUT - [0:0]
:st_clear_caught - [0:0]
:st_clear_detect - [0:0]
:st_penalty_log - [0:0]
:st_penalty_reject - [0:0]
:tetherctrl_FORWARD - [0:0]
:tetherctrl_counters - [0:0]
-A INPUT -j oem_in
-A INPUT -j bw_INPUT
-A INPUT -j fw_INPUT
-A FORWARD -j oem_fwd
-A FORWARD -j fw_FORWARD
-A FORWARD -j bw_FORWARD
-A FORWARD -j tetherctrl_FORWARD
-A OUTPUT -j oem_out
-A OUTPUT -j fw_OUTPUT
-A OUTPUT -j st_OUTPUT
-A OUTPUT -j bw_OUTPUT
-A bw_INPUT -j bw_global_alert
-A bw_INPUT -p esp -j RETURN
-A bw_INPUT -m mark --mark 0x100000/0x100000 -j RETURN
-A bw_INPUT -j MARK --set-xmark 0x100000/0x100000
-A bw_OUTPUT -j bw_global_alert
-A bw_costly_shared -j bw_penalty_box
-A bw_data_saver -j RETURN
-A bw_global_alert
